data/derived/fa15/progs/unify/prog3032.ml.out
Characters 20-21:
  let _ = removeZero [9;9];;
                      ^
Error: This expression has type int but an expression was expected of type
         'a list
